--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -1,22 +1,59 @@
-
-
 <!DOCTYPE html>
 <html ng-app="LunchCheck">
-   <head>
-      <meta charset="utf-8">
-      <script type="text/javascript" src="angular.min.js"></script>
-      <script type="text/javascript" src="app.js"></script>
-      <title>Duoc Do - Module 1 Coding Assignment</title>
-   </head>
-   <body>
-      <h1>Duoc Do - Angularjs</h1>
-      <div ng-controller="LunchCheckController">
-         Your name: <input type="text" name="" value="" ng-model="name">
-         <br>
-         Hello {{name}}, {{sayMessage()}} <br>
-         <br>
-         <button type="button" name="button" ng-click="feedDuocDo()">Feed DuocDo</button>
-         <br><img ng-src="images/duocdo-{{stateOfBeing}}.png" alt="">
-      </div>
-   </body>
+  <head>
+    <meta charset="utf-8">
+    <script type="text/javascript" src="angular.min.js"></script>
+    <script type="text/javascript" src="app.js"></script>
+    <title>Duoc Do - Module 1 Coding Assignment</title>
+  </head>
+  <style media="screen">
+  body{
+  font-family: sans-serif;
+  font-size: 14px;
+  color:#333;
+  }
+  .input-box {
+  width: 250px;  height: 24px;
+  padding: 4px 6px;  font-size: 14px;
+  line-height: 1.42857143;
+  color: #2a73cc;
+  background-color: #fff;
+  border: 1px solid #2a73cc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  }
+  .txt-note {
+  color: #999;
+  font-style: italic;
+  }
+  button{
+  background-color: #fff;
+  color: #2a73cc;
+  padding:6px 12px;
+  border:1px solid #2a73cc;
+  font-size: 15px;
+  }
+  .txt-red {
+  color:#ff2400;
+  font-weight: bold;
+  }
+  .txt-green{
+  color: #05b626;
+  font-weight: bold;
+  }
+  </style>
+  <body>
+    <h1>Lunch Checker</h1>
+    <div ng-controller="LunchCheckController">
+      <input type="text" name="" value="" ng-model="name" class="input-box" id="txtName">
+      <span class="txt-note"> ie.g., "cake, soda, fries, cigar, salad, water"</span>
+      <br><br>
+      <p class="txt-green" id="txtResult">{{result}}</p>
+      <button type="button" name="button" ng-click="btnCheck()">Check If Too Much</button>
+    </div>
+  </body>
 </html>
